# Differential-Drive-AMR

./: .gitignore
src/: README.md
src/Arduino Codes/diff_pid/: diff_pid.ino
src/Arduino Codes/encoder_check/: encoder_check.ino
src/Arduino Codes/omni_arduino/: omni_arduino.ino
src/diff_bot_description/: package.xml  setup.cfg  setup.py
src/diff_bot_description/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml  urdf_view.rviz
src/diff_bot_description/description/: base.xacro  body.urdf.xacro  bot.urdf.xacro  caster.xacro  gazebo.xacro  inertial.xacro  lidar.xacro  materials.xacro  ros2_control.xacro  wheels.xacro
src/diff_bot_description/launch/: eyrc_ws.launch.py  gazebo.launch.py  localization_launch.py  rs_ws.launch.py  urdf.launch.py
src/diff_bot_description/map/: f_map.pgm  f_map.yaml  f_map_serial.data  f_map_serial.posegraph
src/diff_bot_description/nodes/: topics_pub_sub.py
src/eyantra_warehouse/config/: bridge.yaml
src/eyantra_warehouse/launch/: task4c.launch.py
src/eyantra_warehouse/worlds/: eyantra_warehouse_task2.world
src/rs_warehouse/: CMakeLists.txt  package.xml
src/rs_warehouse/config/: bridge.yaml
src/rs_warehouse/worlds/: warehouse_world.sdf
